# libsws

./: CMakeLists.txt  README.md  sws.cpp  sws.h  swscontainer.cpp  swscontainer.h  swscontainermodule.cpp  swscontainermodule.h  swsengine.cpp  swsengine.h  swsexception.h  swsfactory.h  swsmodule.cpp  swsmodule.h  swsmodulefactory.cpp  swsmodulefactory.h  swsplug.cpp  swsplug.h  swsschema.cpp  swsschema.h  swsvalue.h
atoms/: baseoperations.cpp  baseoperations.h
